Alvares.Rimsky | placeholder|email sample,fullname

--- a/app/app_core/templates/registration.html
+++ b/app/app_core/templates/registration.html
@@ -40,14 +40,14 @@
         </p>
         <p>
             <form>
-                current address:
+                Current address:
                 <input type="text" name="current address">
                 <br>
             </form>
         </p>
         <form>
             <p>
-                permanent address :
+                Permanent address :
                 <input type="text" name="permanent address">
                 <br>
                 <form>
