Joelle ,Noor |this is the modication of password

--- a/app/app_core/templates/registration.html
+++ b/app/app_core/templates/registration.html
@@ -162,7 +162,8 @@
                 <tr>
                     <td>Password</td>
                     <th>
-                        <input type="text">
+                        <input type="password" id="myPsw" value="psw123">
+
                     </th>
                 </tr>
             </table>
