--- a/app/app_core/templates/home.html
+++ b/app/app_core/templates/home.html
@@ -7,98 +7,168 @@
     <meta name="viewport" content="width=device-width">
     <script src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
     <script src="/static/slippry/dist/slippry.min.js"></script>
-    <link rel="stylesheet" href="/static/slippry/dist/slippry.css">
-    <link rel="stylesheet" href="/static/css/home.css" type="text/css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/fancybox/2.1.5/jquery.fancybox.min.js"></script>
     <link rel="stylesheet" href="/static/slippry/dist/slippry.css">
     <link rel="stylesheet" href="/static/css/home.css" type="text/css">
     <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/fancybox/2.1.5/jquery.fancybox.min.css" media="screen" />
     <style type="text/css">
+
+
     body {
-        background-color: #CCE6FF
-    }
-    
-    #Table1 {
-        background-color: #5CD6FF;
-        font: 20px arial, sans-serif;
-        width: 50%;
-        margin: 5px auto
-    }
-    
-    a:link {
-        color: black;
-        text-decoration: none
-    }
-    
-    a:hover {
-        text-transform: none
+        background-color: #ffffff
+        width: 100%;
+        margin: auto;
+        padding-top: 200px;
+        padding-bottom: 0px;
+        
+
     }
     
     #bar {
-        padding-top: 25px
+        
+        font: 20px arial, sans-serif;
+        width: 50%;
+        margin: 5px auto
+        position: relative;
+        top: 0px;
+
+    }
+    header{
+
+        height: 200px;
+        width: 100%;
+        background: #ebebeb;
+        position: fixed;
+        z-index: 10;     
+        padding-top: 0px;
+        margin: 0;
+        opacity: 100%;
+        top: 0;
+    }
+
+
+    ul {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    overflow: hidden;
+}
+li {
+    display: inline;
+    float: left;
+}
+a {
+    display: block;
+    width: 120px;
+    background-color: none;
+}
+
+    #lbar{
+        padding-top: 0px;
+
+    }
+    a:hover{
+        background-color:#0985e4;
+    }
+
+    #textLogo{
+        padding-left: 110px;
+        height: 100px;
+
+    }
+    #logo{
+        padding-left: 50px;
+    }
+
+    
+    a:link {
+        color: white;
+        text-decoration: none
     }
     
-    header {
-        height: 100px;
-        background: #dbdbdb;
-        width: 100%;
-        z-index: 10;
-        position: fixed;
+    
+    }
+    
+    #bar {
+        padding-top: 0px
+        top: 0px;
+    }
+    
+    footer {
+        padding-top: 600px
     }
     </style>
 </head>
 
-<body style="background-color:#CCE6FF">
-    <div>
-        <img height="5%" src="/static/images/logo1.jpeg" width="10%" id="logo">
-    </div>
-    <center>
-        <h1>Knowledge Sharing Campaign</h1>
-    </center>
-    <div id="header">
-        <h3>
-        <table border="1" width="100%" id="Table1">
-            <tr align="center">
-                <td><a href="/">Home</a></td>
-                <td><a href="aboutus">About Us</a></td>
-                <td><a href="events">Events</a></td>
-                <td><a href="gallery">Gallery</a></td>
-                <td><a href="contactus">Contact Us</a></td>
-            </tr>
-        </table>
-    </div>
-</header>
+<header>
     
-    <div align="right" id="lang">
-        <select><option>Language</option>
+    <div class="headcontent">
+        
+   
+       
+    <div>
+        <tr><img height="7%" src="/static/images/ksclogo1.png" width="12%" id="logo">
+
+        </tr>
+       
+
+    </div>
+    
+    <div id="lbar" align="right" id="lang">
+        <select>
+            <option>Language</option>
             <option value="English">English</option>
             <option value="French">French</option>
         </select>
-        <button type="button">Log In</button>
+        <button type="button" onclick="window.location='/register'">Log In</button>
+    </div>
+    <div align="center">
+        
+            <ul align="center" id="bar">
+                <li><a href="#home.html">Home</a></li>
+                <li><a href="#aboutus.html">About Us</a></li>
+                <li><a href="#gallery.html">Gallery</a></li>
+                <li><a href="#forum.html">Forum</a></li>
+                <li><a href="#upcomingevents.html">Events</a></li>
+            </ul>
+            </div>
+    
+    
     </div>
 
-    <p>
-        <a href="https://www.facebook.com/Knowledge-Sharing-Campaign-2017193451752977/timeline/?ref=br_tf">
-            <img align="right" alt="Go to KSC facebook page" border="0" height="42" src="/static/images/facebook1.jpeg" width="42"></a>
-        <a href="https://accounts.google.com/ServiceLogin?service=oz&passive=1209600&continue=https://plus.google.com/?gpsrc%3Dgplp0#identifier">
-            <img align="right" alt="Go to KSC google+ page" border="0" height="42" src="/static/images/google1.jpeg" width="42"></a>
-        <a href="https://twitter.com/hashtag/KnowledgeSharingCampaign?src=hash&lang=en"><img align="right" alt="Go to KSC facebook page" border="0" height="42" src="/static/images/twitter1.jpeg" width="42"></
-        </p>
+</header>
+
+<body>
+    
+   
+
+
+
+    
+    
     <section class="slider_wrapper">
         <article class="slider_block">
             <ul id="slider">
-                <li><a href="#slide1"><img src="/static/images/1.jpg"></a></li>
-                <li><a href="#slide2"><img src="/static/images/2.jpg"></a></li>
-                <li><a href="#slide3"><img src="/static/images/3.jpg"></a></li>
-                <li><a href="#slide4"><img src="/static/images/4.jpg"></a></li>
-                <li><a href="#slide5"><img src="/static/images/5.jpg"></a></li>
-                <li><a href="#slide6"><img src="/static/images/6.jpg"></a></li>
-                <li><a href="#slide7"><img src="/static/images/7.jpg"></a></li>
+                <li>
+                    <a href="#slide1"><img src="/static/images/1.jpg"></a>
+                </li>
+                <li>
+                    <a href="#slide2"><img src="/static/images/2.jpg"></a>
+                </li>
+                <li>
+                    <a href="#slide3"><img src="/static/images/3.jpg"></a>
+                </li>
+                <li>
+                    <a href="#slide4"><img src="/static/images/4.jpg"></a>
+                </li>
             </ul>
         </article>
     </section>
     <footer>
         <div>
+
+
+
             <p>
                 <a id="contact-us" href="javascript:;">Contact Us</a>
                 <script>
@@ -125,28 +195,7 @@
                 });
                 </script>
                 <br>
-                <p>Copyright knowledgesharingcampaign
-                    <a id="termscons" href="javascript:;">(Terms&amp;Conditions)</a>
-                    <script>
-                    $("#termscons").click(function() {
-                        $.fancybox.open({
-                            href: '/static/htmls/termscons.html',
-                            type: 'iframe',
-                            padding: 5
-                        });
-                    });
-                    </script>
-                    <a id="privacy" href="javascript:;">(Privacy Policy)</a>
-                    <script>
-                    $("#privacy").click(function() {
-                        $.fancybox.open({
-                            href: '/static/htmls/privacy.html',
-                            type: 'iframe',
-                            padding: 5
-                        });
-                    });
-                    </script>
-                </p>
+                <p>Copyright knowledgesharingcampaign <a href="terms&con.html" target="_blank">    (Terms & Conditions)</a> </p>
         </div>
     </footer>
     <script>
