Alvares, Juma | adding Mauritius to African countries list

--- a/app/app_core/templates/registration.html
+++ b/app/app_core/templates/registration.html
@@ -84,6 +84,7 @@
                             <option value="MG">Madagascar</option>
                             <option value="ML">Mali</option>
                             <option value="MR">Mauritania</option>
+                            <option value="ZW">Mauritius</option>
                             <option value="MA">Morocco</option>
                             <option value="MZ">Mozambique</option>
                             <option value="NA">Namibia</option>
@@ -97,13 +98,14 @@
                             <option value="OI">Somalia</option>
                             <option value="ZA">South Africa</option>
                             <option value="SD">Sudan</option>
+                            <option value="SD"> South Sudan</option>
                             <option value="TZ">Tanzania</option>
                             <option value="TG">Togo</option>
                             <option value="TN">Tunisia</option>
                             <option value="UG">Uganda</option>
-                            <option value="ZR">Zaire</option>
                             <option value="ZM">Zambia</option>
-                            <option value="ZW">Zimbabwe</option>
+                            
+
                         </select>
                         <br>
                     </p>
