Rim | #20| registration form

--- a/app/app_core/templates/home.html
+++ b/app/app_core/templates/home.html
@@ -120,7 +120,8 @@ a {
             <option value="English">English</option>
             <option value="French">French</option>
         </select>
-        <button type="button" onclick="window.location='/register'">Log In</button>
+        <button type="button" onclick="window.location='/login'">Log In</button>
+        <button type="button" onclick="window.location='/register'">Registration</button>
     </div>
     <div align="center">
         
