Alvares, Juma | adding Mauritius to African

--- a/app/app_core/templates/registration.html
+++ b/app/app_core/templates/registration.html
@@ -294,6 +294,7 @@
                             <option value="UG">Uganda</option>
                             <option value="ZR">Zaire</option>
                             <option value="ZM">Zambia</option>
+                            <option value="ZM">Zimbabwe</option>
 
                             <option value="ZW">Zimbabwe</option>
                         </select> </label></p>
