Rim | #20| registration form

--- a/app/app_core/templates/registration.html
+++ b/app/app_core/templates/registration.html
@@ -4,7 +4,7 @@
 <link href="../SpryAssets/SpryValidationPassword.css" rel="stylesheet" type="text/css">
 <style>
 body {
-  background:url('../../static/images/bg.jpg')no-repeat;
+  background:url('../../static/images/bg.jpg');
   color: #fff;
   font-size: 20px;
   font-family: reguler;
