--- a/app/app_core/templates/registration.html
+++ b/app/app_core/templates/registration.html
@@ -2,6 +2,7 @@
 <head>
 <script src="../SpryAssets/SpryValidationPassword.js" type="text/javascript"></script>
 <link href="../SpryAssets/SpryValidationPassword.css" rel="stylesheet" type="text/css">
+
 <style>
 body {
   background:url('../../static/images/bg.jpg');
@@ -13,8 +14,8 @@ body {
 h1 { 
   background:url('') no-repeat;
 }
-  
 </style>
+
 <script type="text/javascript" src="/static/js/md5.min.js"></script>
 <script type="text/javascript">
     function validate() {
@@ -23,9 +24,43 @@ h1 {
 
         return actual_answer.indexOf(my_answer) >= 0;
     }
+</script>
+<style>
+  body {
+    background:url('../../static/images/bg.jpg');
+    color: #fff;
+    font-size: 20px;
+    font-family: reguler;
+    page-break-after: center;
+  }
+  h1 { 
+    background:url('') no-repeat;
+  }
+</style>
+<style>
+      .h1 {
+          text-decoration: underline;
+      }
+      body{
+          background: #e2e2e2;
+      }
+</style>
+    <script type="text/javascript" src="/static/js/md5.min.js"></script>
+    <script type="text/javascript">
+        function validate() {
+            var my_answer = md5(document.getElementById("my_answer").value);
+            var actual_answer = document.getElementById("actual_answer").value;
+            return actual_answer.indexOf(my_answer) >= 0;
+        }
     </script>
 </head>
-
+<div id="lbar" align="right" id="lang">
+        <select>
+            <option>Language</option>
+            <option value="English">English</option>
+            <option value="French">French</option>
+        </select>
+        </div>
 <body>
 <h1>SIGN UP</h1>
 <form name="form1" method="post" action="">
@@ -272,12 +307,18 @@ h1 {
                             <option value="UG">Uganda</option>
                             <option value="ZR">Zaire</option>
                             <option value="ZM">Zambia</option>
+
                             <option value="ZW">Zimbabwe</option>
                         </select> </label></p>
   <p>
     <label>City : <span class="required"></span>
       <input type="text" name="city" id="city">
     </label>
+  </p>
+  <p>
+    <label for="university"> University/Institution <span class="required"></span></label>
+    <input type="text" name="university or institution">
+    <br>
   </p>
   <p>
     <label>Course : <span class="required"></span>
@@ -299,24 +340,58 @@ h1 {
     <br>
   </p>
   <p>
-                        <label for="captchar"> Answer the question </label> <span class="captchar"></span>
-                        <br>
-                        <label>{{question}}</label>
-                        <br>
-                        <input style="display: none" id="actual_answer" value={{answers}}>
-                        <input type="text" placeholder="Type your answer" id="my_answer">
-                        <br>
-                    </p>
-                    <p>                        <label for="password">Password: <span class="required"></span></label>
-                       <input type="text" id="password" name="password" value="" placeholder="*********" required="required" autofocus="autofocus" />
-                  </p>
-                   <p>
-                       <INPUT TYPE="checkbox" NAME="Terms" VALUE="Conditions"> "I have read and agree to the following" <a target="_blank" href="http://ideamensch.com/terms-and-conditions" rel="nofollow">Terms and conditions</a>
-                    </p>
-                    <p>
-                    <input type="submit" value="Submit"><br></p>
+      <label for="captchar"> Answer the question </label> <span class="captchar"></span>
+      <br>
+      <label>{{question}}</label>
+      <br>
+      <input style="display: none" id="actual_answer" value={{answers}}>
+      <input type="text" placeholder="Type your answer" id="my_answer">
+      <br>
+  </p>
+  <p> 
+  <label for="password">Password: <span class="required"></span></label>
+    <input type="password" id="password" name="password" value="" placeholder="Password" required="required" autofocus="autofocus"/>
+</p>
+ <p>
+     <INPUT TYPE="checkbox" NAME="Terms" VALUE="Conditions"> "I have read and agree to the following" <a target="_blank" href="http://ideamensch.com/terms-and-conditions" rel="nofollow">Terms and conditions</a>
+  </p>
   </head>
-  
+  <body>
+    <form action="?" method="POST">
+      <div class="g-recaptcha" data-sitekey="your_site_key"></div>
+      <br/>
+      <input type="submit" value="Submit">
+    </form>
+                </p>
+</form>
+<script type="text/javascript">
+var sprypassword1 = new Spry.Widget.ValidationPassword("sprypassword1");
+</script>
+
+                            
+
+                        </select>
+                        <br>
+                    </p>
+                </form>
+                </p>
+                
+    <p>
+        <script type="text/javascript">
+            $('#recaptchaButton').click(function (e) {
+                e.preventDefault();
+            $.post('https://examples.webscript.io/recaptcha',
+        { challenge: Recaptcha.get_challenge(), response:Recaptcha.get_response() },
+        function (data) {
+            if (data.success) {
+                alert("Captcha completed successfully!");
+                loadCaptcha();
+            } else {
+                alert("Captcha failed.");
+            }});});     
+    </script>
+    </p>
+    </div>
 </body>
 
 </html>
