Rim | #20| registration form

--- a/app/app_core/templates/registration.html
+++ b/app/app_core/templates/registration.html
@@ -299,14 +299,14 @@ h1 {
     <br>
   </p>
   <p>
-                      <label for="captchar"> Answer the question </label> <span class="captchar"></span>
-                      <br>
-                      <label>{{answers}}</label>
-                       <br>
-                       <input style="display: none" id="actual_answer" value={{answers}}>
-                      <input type="text" placeholder="Type your answer" id="my_answer">
-                       <br>
-                  </p>
+                        <label for="captchar"> Answer the question </label> <span class="captchar"></span>
+                        <br>
+                        <label>{{question}}</label>
+                        <br>
+                        <input style="display: none" id="actual_answer" value={{answers}}>
+                        <input type="text" placeholder="Type your answer" id="my_answer">
+                        <br>
+                    </p>
                     <p>                        <label for="password">Password: <span class="required"></span></label>
                        <input type="text" id="password" name="password" value="" placeholder="*********" required="required" autofocus="autofocus" />
                   </p>
@@ -314,7 +314,7 @@ h1 {
                        <INPUT TYPE="checkbox" NAME="Terms" VALUE="Conditions"> "I have read and agree to the following" <a target="_blank" href="http://ideamensch.com/terms-and-conditions" rel="nofollow">Terms and conditions</a>
                     </p>
                     <p>
-                    <input type="submit" value="Submit"><br>
+                    <input type="submit" value="Submit"><br></p>
   </head>
   
 </body>
