--- a/app/app_core/templates/home.html
+++ b/app/app_core/templates/home.html
@@ -144,10 +144,23 @@ The fun is in making the connections.<br><strong>Arthur Aufderheide</strong>
       <div>
 
         <p>
-            <a id="contact-us" href="javascript:;"><font size="4.5" font color="black">Contact Us</font></a>
-            <a id="partners" href="javascript:;"><font size="4.5"> | &nbsp; &nbsp; Partners </font></a>
+            
 
-            <script>
+
+
+ 
+
+
+       
+    </div>
+
+
+
+<a id="contact-us" href="javascript:;"><font size="3" font color="black">Contact Us |</a>  <a id="partners" href="javascript:;">Partners </font></a>
+<div id="socialmedia" align="right">
+
+
+<script>
             $("#contact-us").click(function() {
                 $.fancybox.open({
                     href: '/static/htmls/contacts.html',
@@ -157,24 +170,7 @@ The fun is in making the connections.<br><strong>Arthur Aufderheide</strong>
                 });
                 </script>
 
-
-<div>
- <ul id="socialmedia"align="center">
-
-<li><a href="https://www.facebook.com/Knowledge-Sharing-Campaign-2017193451752977/timeline/?ref=br_tf" target="_blank">
-    <img alt="Go to KSC facebook page" align="right" border="0" height="40" src="/static/images/facebook1.jpeg" width="40">
-</a></li>
-<li><a href="https://accounts.google.com/ServiceLogin?service=oz&passive=1209600&continue=https://plus.google.com/?gpsrc%3Dgplp0#identifier" target="_blank"><img alt="Go to KSC google+ page" align="right" border="0" height="40" src="/static/images/google1.jpeg" width="40"></a></li>
-<li><a href="https://twitter.com/hashtag/KnowledgeSharingCampaign?src=hash&lang=en" target="_blank">
-    <img alt="Go to KSC facebook page" border="0" height="40" src="/static/images/twitter1.jpeg" width="40">
-</a>
-</li>
-</ul>
-</div>
-
-
-
-<script>
+                <script>
 $("#partners").click(function() {
 $.fancybox.open({
 href: '/static/htmls/partners.html',
@@ -183,13 +179,20 @@ padding: 2
 });
 });
 </script>
-            </p>
-       
-    </div>
+
+<a href="https://www.facebook.com/Knowledge-Sharing-Campaign-2017193451752977/timeline/?ref=br_tf" target="_blank">
+    <img alt="Go to KSC facebook page" align="right" border="0" height="40" src="/static/images/facebook1.png" width="40">
+</a>
+<a href="https://accounts.google.com/ServiceLogin?service=oz&passive=1209600&continue=https://plus.google.com/?gpsrc%3Dgplp0#identifier" target="_blank"><img alt="Go to KSC google+ page" align="right" border="0" height="40" src="/static/images/google1.png" width="40"></a>
+<a href="https://twitter.com/hashtag/KnowledgeSharingCampaign?src=hash&lang=en" target="_blank">
+    <img alt="Go to KSC facebook page" border="0" height="40" src="/static/images/twitter1.png" width="40">
+</a>
+
+</div>
+            
 
 
-
-<li><a id="termscons" href="javascript:;"> <font size="0.5" > Terms&Conditions &nbsp;&nbsp;|</font></a></li>
+<li><a id="termscons" href="javascript:;"> <font size="0.5" > &nbsp;&nbsp;Terms&Conditions |</font></a></li>
 <script>
 $("#termscons").click(function() {
 $.fancybox.open({
@@ -209,8 +212,9 @@ padding: 5
 });
 });
 </script>
-
+      <div id="cpy">
       <p>Copyright &copy; 2015 &middot; KnowledgeSharingCampaign &middot; </p>
+      </div>
     </div>
   </div>
   <hr>
