Rim, Juma | #41 | Adding login page and forgot password page.

--- a/app/app_core/templates/aboutus.html
+++ b/app/app_core/templates/aboutus.html
@@ -1,72 +1,69 @@
 <!DOCTYPE html>
 <html>
-	<head>
-	    <title>About Us</title>
-	    <link rel="stylesheet" type="text/css"  href='../../static/css/aboutus.css'/>
+      <head>
+          <title>About Us</title>
+          <link rel="stylesheet" type="text/css"  href='../../static/css/aboutus.css'/>
+      </head>
 
-	</head>
-	<body style="background-color:#CCE6FF" />
-	<center>
-	    <h1>Knowledge Sharing Campaign</h1>
-	    <img src="https://avatars2.githubusercontent.com/u/12671253?v=3&s=200" />
-	</center>
-		<div header>
-					<table border="1" width="100%" id="Table1">
-						<tr font-size="14" align="center">
-							<td><a href="/">Home</a></td>
-							<td><a href="aboutus">About Us</a></td>
-							<td><a href="gallery">Gallery</a></td>
-							<td><a href="events">Events</a></td>
-						</tr>
-					</table>
-			</div>
-			<div>
-			<h1 align="center">ABOUT US</h1>
-			<div align="justify"><h1>HISTORY OF KSC</h2>
-			<p><h2>1. Background</h2></p>
-            <p><td>The Knowledge Sharing Campaign (KSC) creates a platform that brings together two groups of people: the Know Can Teach those who have some experience and would like to share their knowledge) group and the Dont Know  Can Learn (those who would like to learn, but do not have the opportunity) group. KSC originated from a simple idea, which turned out to be its slogan: Bring, Share, and Learn. We believe that if these two groups come together, agree to bring and share the minimum required resources that facilitate learning, then KSC becomes an intersection between humanity and technology that provides a great platform to promote excellence in education. 
-            KSC is based on two key principles that can be derived from the following quotes.</td></p>
-            <h1>Goals and Objectives</h1>
-            <h2></h2>
-            <ul><p><li>KSC aims to partner with African Students Association's ASA and all other international organisations to support African student diaspora in providing the following.</li></p>
-            <p><li> Build strong and more organised ASAs</p></li>
-            <p><li> Promote excellence in education through technology</li></p>
-            <p><li> Provide internship opportunities to African students</li></p>
-            <p><li> Create platform to debates and exchange discussions around key topics regarding social and economic justice 4. </li></p>
-            <p><li> Fill the gap between the skills that they have after completing their studies and those that are required by companies to hire them </li></p>
-            <p><li> Provide exposure and basic skills in project development cycle</li></p>
-            <p><li> Practical knowledge working on real time projects</li></p>
-            <p><li> Develop interest in learning free and open source technology </li></p>
-            <p><li> Build their leadership skills</li></p>
-            <p><li> Improve awareness in social and economic issues b. Structure KSC put in place an internship programme, which at the moment is unpaid, to provide African students with exposure and basic skills in the following areas.</li></p>
-            <p><li> Team building activities</li></p>
-            <p><li> Communication/Presentation Skills Pecha Kucha </li></p>
-            <p><li> Agile Practices </li></p>
-            <p><li> Project Development Cycle </li></p>
-            <p><li> Awareness for Global Social and Economic Injustice</li></p>
-            <p><li> Writing Skills  Internship Programme Student Report </li></p>
-            <p>2. Learnings and Improvements Our KSC journey in the past few months has taught us many things to reflect on and also helped us identify areas of improvement.</p>
-            <p>Target Audience Kscs target group is made of African students. The campaign can be extended to any other student diaspora.</p>
-            <p>KSC PROGRAMMES KSC as an educational platform, provides a series of programs which aim at equipping the youth with all required skills to embrace technology and develop their communities. </p>
-            <p>1. Internship Programme</p>
-            <p>hase 1 It is clear that African students face challenges to get internship opportunities, when they complete their studies outside the continent. There is a claim that their study permits will not allow them to participate in internship programmes. We understand the gap that exists between the skills set that African students possess after their graduation and the skills that are required by companies to hire them.</p>
-            <p><li> Delegate students selection process to ASA</li></p>
-            <p><li> Prioritise on students in final years</li></p>
-            <p><li> Revisit KSC Internship Programme Budget</li></p>
-            <h1>KSC FUTURE GOALS </h1>
-            <p><li> Address all both tech and socio economic areas of improvement </li></p>
-            <p><li> Consolidate KSC Internship Programme Curriculum</li></p>
-            <p><li> Support KSC activities in other cities in India</li></p>
-            <p><li> Develop KSC global movement</li></p>
-            <h1>HOW CAN YOU CONTRIBUTE? </h1>
-            <p><li> Sign up to run KSC sessions</li></p>
-            <p><li> Partner with us to run KSC activities in your community</li></p>
-            <p> Connect us with aligned organisations which can financially support students and address our budget constraints.</p></ul>
-			</div>
-			<div>
-				<h2>
+	<body style="background-color:#CCE6FF"/>
+      	<center>
+      	    <h1>Knowledge Sharing Campaign</h1>
+      	    <img src="https://avatars2.githubusercontent.com/u/12671253?v=3&s=200" />
+      	</center>
 
-
-			</div>
-	</body>
+      	<div header>
+      		<table border="1" width="100%" id="Table1">
+      			<tr font-size="14" align="center">
+      				<td><a href="/">Home</a></td>
+      				<td><a href="aboutus">About Us</a></td>
+      				<td><a href="gallery">Gallery</a></td>
+      				<td><a href="events">Events</a></td>
+      			</tr>
+      		</table>
+      	</div>
+	
+            <div>
+            	<h1 align="center">About Us</h1>
+            	<div align="justify"><h1>History of KSC</h2>
+            	<p><h2>1. Background</h2></p>
+                  <p><td>The Knowledge Sharing Campaign (KSC) creates a platform that brings together two groups of people: the Know and Can Teach (those who have some experience and would like to share their knowledge) group and the Do not Know and Can Learn (those who would like to learn, but do not have the opportunity) group. KSC originated from a simple idea, which turned out to be its slogan: Bring, Share, and Learn. We believe that if these two groups come together, agree to bring and share the minimum required resources that facilitate learning, then KSC becomes an intersection between humanity and technology that provides a great platform to promote excellence in education. 
+                  KSC is based on two key principles that can be derived from the following quotes.</td></p>
+                  <h1>Goals and Objectives</h1>
+                  <h2></h2>
+                  <ul><p><li>KSC aims to partner with African Students Association's ASA and all other international organisations to support African student diaspora in providing the following.</li></p>
+                  <p><li> Build strong and more organised ASAs</p></li>
+                  <p><li> Promote excellence in education through technology</li></p>
+                  <p><li> Provide internship opportunities to African students</li></p>
+                  <p><li> Create platform to debates and exchange discussions around key topics regarding social and economic justice 4. </li></p>
+                  <p><li> Fill the gap between the skills that they have after completing their studies and those that are required by companies to hire them </li></p>
+                  <p><li> Provide exposure and basic skills in project development cycle</li></p>
+                  <p><li> Practical knowledge working on real time projects</li></p>
+                  <p><li> Develop interest in learning free and open source technology </li></p>
+                  <p><li> Build their leadership skills</li></p>
+                  <p><li> Improve awareness in social and economic issues b. Structure KSC put in place an internship programme, which at the moment is unpaid, to provide African students with exposure and basic skills in the following areas.</li></p>
+                  <p><li> Team building activities</li></p>
+                  <p><li> Communication/Presentation Skills Pecha Kucha </li></p>
+                  <p><li> Agile Practices </li></p>
+                  <p><li> Project Development Cycle </li></p>
+                  <p><li> Awareness for Global Social and Economic Injustice</li></p>
+                  <p><li> Writing Skills  Internship Programme Student Report </li></p>
+                  <p>2. Learnings and Improvements Our KSC journey in the past few months has taught us many things to reflect on and also helped us identify areas of improvement.</p>
+                  <p>Target Audience Kscs target group is made of African students. The campaign can be extended to any other student diaspora.</p>
+                  <p>KSC PROGRAMMES KSC as an educational platform, provides a series of programs which aim at equipping the youth with all required skills to embrace technology and develop their communities. </p>
+                  <p>1. Internship Programme</p>
+                  <p>hase 1 It is clear that African students face challenges to get internship opportunities, when they complete their studies outside the continent. There is a claim that their study permits will not allow them to participate in internship programmes. We understand the gap that exists between the skills set that African students possess after their graduation and the skills that are required by companies to hire them.</p>
+                  <p><li> Delegate students selection process to ASA</li></p>
+                  <p><li> Prioritise on students in final years</li></p>
+                  <p><li> Revisit KSC Internship Programme Budget</li></p>
+                  <h1>KSC Future Goals</h1>
+                  <p><li> Address all both tech and socio economic areas of improvement </li></p>
+                  <p><li> Consolidate KSC Internship Programme Curriculum</li></p>
+                  <p><li> Support KSC activities in other cities in India</li></p>
+                  <p><li> Develop KSC global movement</li></p>
+                  <h1>How Can You Contribute? </h1>
+                  <p><li> Sign up to run KSC sessions</li></p>
+                  <p><li> Partner with us to run KSC activities in your community</li></p>
+                  <p> Connect us with aligned organisations which can financially support students and address our budget constraints.</p></ul>
+      	</div>
+      </body>
 </html>
